--- a/src/app/dashboard/location/location.component.html
+++ b/src/app/dashboard/location/location.component.html
@@ -20,6 +20,14 @@
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
                         <input type="text" class="form-control" placeholder="Search {{ placeholder }}" [(ngModel)]="refId" />
                     </div>
+                    <!-- <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                        <ng-select class="ng-select inputs2" [items]="city" bindLabel="city" bindValue="city" placeholder="Select City">
+                        </ng-select>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3 mb-3">
+                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location">
+                        </ng-select>
+                    </div> -->
                 </div>
                 <div class="row mb-3">
                     <div class="btn-container">
