--- a/src/app/dashboard/inventory/inventory.component.css
+++ b/src/app/dashboard/inventory/inventory.component.css
@@ -31,12 +31,11 @@
 }
 
 .normal {
-    height: 16px;
-    margin-left: 3px;
+    height: 22px;
 }
 
 .super-hot {
-    height: 20px;
+    height: 22px;
 }
 
 .table th {
@@ -121,6 +120,7 @@
     margin-left: auto;
     margin-right: 12px;
 }
+
 .btn-container button {
     margin-left: 10px;
 }
@@ -136,7 +136,9 @@
     border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-ng-select, .form-control {
+
+ng-select,
+.form-control {
     font-size: 0.8rem;
     font-weight: 400;
 }
