filter added to user component

--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -67,7 +67,7 @@
                                         <th scope="col">Demand</th>
                                         <th scope="col">Added On</th>
                                         <th scope="col">Assigned To</th>
-                                        <th scope="col">Media</th>
+                                        <!-- <th scope="col">Media</th> -->
                                         <th scope="col">Operations</th>
                                     </tr>
                                 </thead>
@@ -133,9 +133,9 @@
                                                     }}<span>,</span><br></span>
                                             </span>
                                         </td>
-                                        <td>
+                                        <!-- <td>
                                             <span><b>Media: </b> {{ user?.media }}</span><br />
-                                        </td>
+                                        </td> -->
                                         <td style="width: 12%;">
                                             <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i>
                                             <a (click)="setUserToEdit(user)" role="button"></a>
