--- a/src/app/dashboard/users/users.component.html
+++ b/src/app/dashboard/users/users.component.html
@@ -13,12 +13,16 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6 col-xl-2 mb-3">
+                    <!-- <div class="col-12 col-sm-6 col-xl-2 mb-3">
                         <ng-select [items]="options" bindLabel="name" bindValue="value" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-xl-2 mb-3">
                         <input type="text" class="form-control" placeholder="Search {{ placeholder }}" [(ngModel)]="refId" />
+                    </div> -->
+                    <div>
+                        <ng-select class="ng-select inputs2" [items]="agentList" bindLabel="fullname" bindValue="fullname" placeholder="Select Agent" (change)="changeAssignedAgent($event)">
+                        </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 col-xl-2 mb-3">
                         <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city" placeholder="Select City" (change)="changeCity($event)">
@@ -28,14 +32,12 @@
                         <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                         </ng-select>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-3 col-xl-2 mb-3">
+                    <!-- <div class="col-12 col-sm-6 col-lg-3 col-xl-2 mb-3">
                         <input placeholder="Start Date" class="form-control" type="text" onfocus="(this.type='date')" (change)="changeStartDate($event)">
-                        <!-- <input type="date" class="form-control" placeholder="Start Date"
-                            (change)="changeStartDate($event)"> -->
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 col-xl-2 mb-3">
                         <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
-                    </div>
+                    </div> -->
                 </div>
                 <div class="row mb-3">
                     <div class="btn-container">
@@ -64,7 +66,7 @@
 
                                 <tbody>
 
-                                    <tr *ngFor="let user of data | filterlist: selectedOption:refId | tableFilter: city | LocationFilter:location | dateFilter: startDate:endDate | orderBy: key: reverse | paginate:{itemsPerPage:10,currentPage:p};">
+                                    <tr *ngFor="let user of data | filterlist: selectedOption:refId | nameFilter: agentAssignedName | tableFilter: city | LocationFilter:location | dateFilter: startDate:endDate | orderBy: key: reverse | paginate:{itemsPerPage:10,currentPage:p};">
                                         <td>{{ user?.userId }}</td>
                                         <td>
                                             <span *ngIf="user?.fullname">{{ user?.fullname | titlecase }}</span>
