--- a/src/app/dashboard/users/users.component.html
+++ b/src/app/dashboard/users/users.component.html
@@ -20,7 +20,7 @@
                     <div class="col-12 col-sm-6 col-xl-2 mb-3">
                         <input type="text" class="form-control" placeholder="Search {{ placeholder }}" [(ngModel)]="refId" />
                     </div> -->
-                    <div>
+                    <div class="col-12 col-sm-6 col-lg-3 col-xl-2 mb-3">
                         <ng-select class="ng-select inputs2" [items]="agentList" bindLabel="fullname" bindValue="fullname" placeholder="Select Agent" (change)="changeAssignedAgent($event)">
                         </ng-select>
                     </div>
