text area updated for comments

--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -245,8 +245,10 @@
                     </div>
                 </div>
 
-                <div *ngIf="isCheckComment">
-                    <textarea>{{currentUser?.comments}}
+                <div *ngIf="isCheckComment" class="form-group mt-3">
+                    <textarea class="form-control" style="
+                    height: 100px;
+                ">{{currentUser?.comments}}
                         </textarea>
                 </div>
             </div>
