--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <div class="table-container mb-5 mt-4">
+                        <div class="table-container mb-5 mt-4 leads">
                             <table class="table table-hover">
                                 <thead>
                                     <tr>
@@ -246,9 +246,7 @@
                 </div>
 
                 <div *ngIf="isCheckComment" class="form-group mt-3">
-                    <textarea class="form-control" style="
-                    height: 100px;
-                ">{{currentUser?.comments}}
+                    <textarea class="form-control" ngModel style="height: 140px;">{{currentUser?.comments}}
                         </textarea>
                 </div>
             </div>
