--- a/src/app/dashboard/location/location.component.html
+++ b/src/app/dashboard/location/location.component.html
@@ -65,7 +65,7 @@
                                                 }}, </span>
                                         </td>
                                         <ng-template #LocationBlock>
-                                            {{'N/A'}}
+                                            {{'None'}}
                                         </ng-template>
                                         <td *ngIf="currentLoginUser?.access !== 'agent'"><i class="fa fa-edit icon" (click)="setLocation(location)"></i>
                                             <a (click)="setLocation(location)" role="button"></a>
