--- a/src/app/dashboard/users/users.component.html
+++ b/src/app/dashboard/users/users.component.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <div class="table-container mb-5">
+                        <div class="table-container mb-5 user-class">
                             <table class="table table-hover">
                                 <thead>
                                     <tr>
