--- a/src/app/dashboard/inventory/inventory.component.css
+++ b/src/app/dashboard/inventory/inventory.component.css
@@ -89,11 +89,12 @@
     background-color: #3e8e41;
 }
 
-.inventory {
+
+/* .inventory {
     margin-left: 47px;
     margin-top: 120px;
     width: 100%;
-}
+} */
 
 .fa {
     margin-left: 10px;
@@ -145,7 +146,8 @@ ng-select,
     border: 1px solid whitesmoke;
 }
 
-@media only screen and (max-width: 1650px) {
+
+/* @media only screen and (max-width: 1650px) {
     .inventory {
         margin-left: 50px;
     }
@@ -155,15 +157,17 @@ ng-select,
     .inventory {
         margin-left: 80px;
     }
-}
+} */
 
 @media only screen and (max-width: 1200px) {
     .inventory {
-        margin-left: 100px;
-        overflow-x: auto;
+        margin-left: -42px;
+        width: 108%;
     }
 }
 
+
+/* 
 @media only screen and (max-width: 1100px) {
     .inventory {
         margin-left: 120px;
@@ -174,4 +178,4 @@ ng-select,
     .inventory {
         margin-left: -80px;
     }
-}
+} */
