--- a/src/app/dashboard/leads/leads.component.css
+++ b/src/app/dashboard/leads/leads.component.css
@@ -49,10 +49,6 @@
     color: white;
 }
 
-.abc {
-    overflow-x: hidden;
-}
-
 .dropbtn {
     background-color: #38baa2;
     color: white;
@@ -94,11 +90,12 @@
     background-color: #3e8e41;
 }
 
-.inventory {
+
+/* .inventory {
     margin-left: 47px;
     margin-top: 120px;
     width: 100%;
-}
+} */
 
 .fa {
     margin-left: 10px;
@@ -150,28 +147,30 @@ ng-select,
     border: 1px solid whitesmoke;
 }
 
-@media only screen and (max-width: 1650px) {
+
+/* @media only screen and (max-width: 1650px) {
     .inventory {
-        margin-left: 50px;
+        margin-left: 15px;
     }
 }
 
-@media only screen and (min-width: 1200px) and (max-width: 1400px) {
+@media only screen and (min-width: 1300px) and (max-width: 1400px) {
     .inventory {
-        margin-left: 80px;
+        margin-left: -12px;
+    }
+} */
+
+@media only screen and (max-width: 1300px) {
+    .leads {
+        margin-left: -45px;
+        width: 110%;
     }
 }
 
-@media only screen and (max-width: 1200px) {
-    .inventory {
-        margin-left: 100px;
-        overflow-x: auto;
-    }
-}
 
-@media only screen and (max-width: 1100px) {
+/* @media only screen and (max-width: 1100px) {
     .inventory {
-        margin-left: 120px;
+        margin-left: -120px;
     }
 }
 
@@ -179,4 +178,4 @@ ng-select,
     .inventory {
         margin-left: -80px;
     }
-}
+} */
