--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -40,12 +40,14 @@
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
                         <input type="number" class="form-control" placeholder="Max Demand" [(ngModel)]="maxDemand">
                     </div>
-                </div>
-                <div class="row mb-3">
+                    <div class="col-12 col-sm-6 col-lg-3 mb-3" *ngIf="currentLoginUser?.access !== 'agent'">
+                        <ng-select class="ng-select inputs2" [items]="agentList" bindLabel="fullname" bindValue="fullname" placeholder="Select Agent" (change)="changeAssignedAgent($event)">
+                        </ng-select>
+                    </div>
                     <div class="btn-container">
                         <button onclick="window.print()" class="btn btn-primary">Print</button>
                         <button (click)="exportTOExcel()" class="btn btn-primary">Excel</button>
-                    </div>
+                    </div>   
                 </div>
                 <div class="row">
                     <div class="col-12">
@@ -69,7 +71,7 @@
                                 </thead>
 
                                 <tbody>
-                                    <tr *ngFor="let user of user | filterlist: selectedOption:refId | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand | tableFilter: city | LocationFilter:location |  orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p}; ">
+                                    <tr *ngFor="let user of user | filterlist: selectedOption:refId | nameFilter: agentAssignedName | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand | tableFilter: city | LocationFilter:location |  orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p}; ">
                                         <td>
                                             <span *ngIf="user?.priority == 'Super Hot'"><img class="super-hot"
                                                     src="\assets\icons\super_hot.svg"></span>
