Little issues regarding page refresh  resolved

--- a/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
+++ b/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
@@ -1,3 +1,9 @@
+.require {
+    color: #d93025;
+    margin-left: 5px;
+    font-size: 16px;
+}
+
 #content {
     margin: 120px 20px;
 }
@@ -6,6 +12,7 @@
     margin-left: 100px;
     transition: 0.5s all;
 }
+
 
 /* input,
 input::-webkit-input-placeholder {
