--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -41,7 +41,7 @@
                         <input type="number" class="form-control" placeholder="Max Demand" [(ngModel)]="maxDemand">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3" *ngIf="currentLoginUser?.access !== 'agent'">
-                        <ng-select class="ng-select inputs2" [items]="usersList" bindLabel="fullname" bindValue="fullname" placeholder="Select Agent" (change)="changeAssignAgent($event)">
+                        <ng-select class="ng-select inputs2" [items]="usersList" bindLabel="fullname" bindValue="fullname" placeholder="Added By" (change)="changeAssignAgent($event)">
                         </ng-select>
                     </div>
                     <div class="btn-container">
