--- a/src/app/dashboard/assigned-leads/assigned-leads.component.html
+++ b/src/app/dashboard/assigned-leads/assigned-leads.component.html
@@ -164,7 +164,7 @@
                         </ng-select>
                     </div>
                     <div class="col">
-                        <input class="form-control" type="text" placeholder="Search {{ placeholder }}" [(ngModel)]="refId2">
+                        <input class="form-control" type="text" placeholder="Search {{ placeholder2 }}" [(ngModel)]="refId2">
                     </div>
                 </div>
                 <table class="table table-hover">
