UI of add inventory form slightly updated

--- a/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
+++ b/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
@@ -53,6 +53,7 @@ input::-webkit-input-placeholder {
     color: #676767;
     /* color: #1f6e97; */
     font-size: 15px;
+    font-weight: 500;
 }
 
 b {
