--- a/src/app/dashboard/inventory/add-inventories/add-inventories.component.html
+++ b/src/app/dashboard/inventory/add-inventories/add-inventories.component.html
@@ -16,8 +16,8 @@
                                 <div class="col-md-5 col-sm-5 radio-mid">
 
                                     <div class="radio">
-                                        <div class="row ml-2 steps">
-                                            <b class="">Form Title</b>
+                                        <div class="row ml-2">
+                                            <b class="steps">Form Title</b>
                                             <h5 class="require">*</h5>
                                         </div>
                                         <div class="btn-group btn-group-toggle">
@@ -51,8 +51,8 @@
                             <div>
                                 <div class="row" *ngIf="addinventoryForm.get('form_title').value !== 'Inventory'">
                                     <div class="col-md-5 col-sm-5"><br>
-                                        <div class="row ml-1 steps">
-                                            <b class="">Purpose</b>
+                                        <div class="row ml-1">
+                                            <b class="steps">Purpose</b>
                                             <h5 class="require">*</h5>
                                         </div>
                                         <div class="radio ml-1">
@@ -97,6 +97,10 @@
                                 <br><br>
                                 <div class="row">
                                     <div class="form-group" *ngIf="!user">
+                                        <div class="row ml-3">
+                                            <b class="steps">City</b>
+                                            <h5 class="require">*</h5>
+                                        </div>
                                         <div>
                                             <ng-select class="ng-select" [items]="cities" bindLabel="city" bindValue="_id" placeholder="Select City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }" (change)="changeCity($event)">
                                             </ng-select>
@@ -106,6 +110,10 @@
                                         </div>
                                     </div>
                                     <div class="form-group" *ngIf="user">
+                                        <div class="row ml-3">
+                                            <b class="steps">City</b>
+                                            <h5 class="require">*</h5>
+                                        </div>
                                         <div>
                                             <ng-select [(ngModel)]="user.city[0].city" [ngModelOptions]="{standalone: true}" class="ng-select" [items]="cities" bindLabel="city" bindValue="city" placeholder="Select City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }" (change)="changeCity($event)">
                                             </ng-select>
@@ -115,6 +123,10 @@
                                         </div>
                                     </div>
                                     <div class="form-group" *ngIf="user">
+                                        <div class="row ml-3">
+                                            <b class="steps">Location</b>
+                                            <h5 class="require">*</h5>
+                                        </div>
                                         <div class="input-group">
                                             <ng-select [(ngModel)]="selectStringLocations" [ngModelOptions]="{standalone: true}" class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                                             </ng-select>
@@ -122,6 +134,10 @@
                                     </div>
 
                                     <div class="form-group" *ngIf="!user">
+                                        <div class="row ml-3">
+                                            <b class="steps">Location</b>
+                                            <h5 class="require">*</h5>
+                                        </div>
                                         <div>
                                             <ng-select class="ng-select inputs2" [(ngModel)]="selectStringLocations" [ngModelOptions]="{standalone: true}" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" [ngClass]="{ 'is-invalid': submitted && f.location.errors }"
                                                 (change)="changeLocation($event)">
@@ -132,8 +148,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row ml-1 steps">
-                                    <b class="">Property Types</b>
+                                <div class="row ml-1 ">
+                                    <b class="steps">Property Types</b>
                                     <h5 class="require">*</h5>
                                 </div>
                                 <div class="row btn-group-toggle">
@@ -237,8 +253,8 @@
                                 <div class="row">
                                     <!-- <br> <b class="price">Price Range</b> -->
 
-                                    <div class="row ml-3 steps">
-                                        <b class="">Price Range</b>
+                                    <div class="row ml-3">
+                                        <b class="steps">Price Range</b>
                                         <!-- <h5 class="require">*</h5> -->
                                     </div>
                                 </div>
@@ -325,8 +341,8 @@
                                 <div class="row">
                                     <!-- <br> <b class="price">Area Range</b> -->
 
-                                    <div class="row ml-3 steps">
-                                        <b class="">Area Range</b>
+                                    <div class="row ml-3">
+                                        <b class="steps">Area Range</b>
                                         <!-- <h5 class="require">*</h5> -->
                                     </div>
                                 </div>
@@ -383,8 +399,8 @@
                                     <div class="form-group">
                                         <!-- <b>Beds Number</b> -->
 
-                                        <div class="row ml-1 steps">
-                                            <b class="">Beds Number</b>
+                                        <div class="row ml-1">
+                                            <b class="steps">Beds Number</b>
                                             <!-- <h5 class="require">*</h5> -->
                                         </div>
                                         <input type="text" class="form-control" formControlName="beds_number" placeholder="Beds Number" autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.beds_number.errors }" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
@@ -439,14 +455,12 @@
 
                                 <div class="col-md-3 col-sm-3 form-group">
                                     <div class="">
-                                        <!-- <br> <b>Client Name</b> -->
 
-                                        <div class="row ml-1 steps">
-                                            <b class="">Client Name</b>
+                                        <div class="row ml-1">
+                                            <b class="steps">Client Name</b>
                                             <h5 class="require">*</h5>
                                         </div>
                                         <input formControlName="client_name" class="form-control" type="text" placeholder="Client Name " [ngClass]="{ 'is-invalid': submitted && f.client_name.errors }" />
-                                        <!-- <b class="steps">Step 8: Select Client Name</b> -->
 
                                         <div *ngIf="submitted && f.client_name.errors" class="invalid-feedback">
                                             <div *ngIf="f.client_name.errors.required">Client Name is required</div>
@@ -455,15 +469,12 @@
                                 </div>
                                 <div class="col-md-3 col-sm-3 form-group">
                                     <div class="">
-                                        <!-- <br><b>Client Number</b> -->
-
-                                        <div class="row ml-1 steps">
-                                            <b class="">Client Number</b>
+                                        <div class="row ml-1">
+                                            <b class="steps">Client Number</b>
                                             <h5 class="require">*</h5>
                                         </div>
                                         <input formControlName="client_number" class="form-control" type="text" placeholder="Client Number" [ngClass]="{ 'is-invalid': submitted && f.client_number.errors }" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
                                         />
-                                        <!-- <b class="steps">Step 9: Select Client Number</b> -->
                                         <div *ngIf="submitted && f.client_number.errors" class="invalid-feedback">
                                             <div *ngIf="f.client_number.errors.required">Client Number is required</div>
                                         </div>
@@ -472,17 +483,21 @@
                             </div>
                             <div class="row mt-3">
                                 <div class="col-md-3 col-sm-3 form-group">
-                                    <div *ngIf="addinventoryForm.get('property_purpose').value === 'Sell'"> <b class="steps">Client Type</b>
+                                    <div class="row ml-1">
+                                        <b class="steps">Client Type</b>
+                                        <h5 class="require">*</h5>
+                                    </div>
+
+                                    <div *ngIf="addinventoryForm.get('property_purpose').value === 'Sell'">
 
                                         <ng-select class="ng-select inputs2 mt-2" [(ngModel)]="clientType" [ngModelOptions]="{standalone: true}" style="margin-left: 0px;" [items]="client_type" bindLabel="access" bindValue="access" placeholder="Select Client Type" (change)="changeClientType($event)">
                                         </ng-select>
                                     </div>
-                                    <div *ngIf="addinventoryForm.get('property_purpose').value != 'Sell'"> <b class="steps">Client Type</b>
+                                    <div *ngIf="addinventoryForm.get('property_purpose').value != 'Sell'">
 
                                         <ng-select class="ng-select inputs2 mt-2" [(ngModel)]="clientType" [ngModelOptions]="{standalone: true}" style="margin-left: 0px;" [items]="client_type1" bindLabel="access" bindValue="access" placeholder="Select Client Type" (change)="changeClientType($event)">
                                         </ng-select>
                                     </div>
-                                    <!-- <b class="steps">Step 10: Select Client Type</b> -->
                                 </div>
                                 <div class="col-3 form-group">
                                     <b class="steps">Comment</b>
