add inventory UI issues resolved

--- a/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
+++ b/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
@@ -34,7 +34,7 @@ input::-webkit-input-placeholder {
     margin-left: 15px;
     display: block;
     position: relative;
-    width: 300px;
+    width: 91%;
 }
 
 .modal-content {
